[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["render-engine >= 2024.1.2"]
name = "render-engine-subcollections"
dynamic = ["version"]
description = "Create subcollections based on the collection"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_json/"
repository = "https://github.com/kjaymiller/render_engine_json/"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]

